--- a/.github/workflows/pipe.yml
+++ b/.github/workflows/pipe.yml
@@ -34,5 +34,5 @@ jobs:
         context: .
         file: Postech.Fase3.Contatos.Add.Service/Dockerfile
         push: false
-        tags: postech-contatos-Add:latest
+        tags: postech-contatos-add:latest
         load: true
